Archive2/ad/d51146bbb6db11/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:9:25: error: expected unqualified-id before ')' token
     static const ructor() { return ructor(); }
                         ^
