Archive2/ad/d51146bbb6db11/main.cpp
#include <string>

class ructor
{
    std::string name;

    ructor() : name("a") {}

    static const ructor() { return ructor(); }
};      // ^^^^^^^^^^^^ lol